# GW_lensing_with_non-uniform_FFTs

./: F(w)_ClumpyNFW.ipynb  F(w)_auto.ipynb  F(w)_general_analytic_tail.ipynb  F(w)_tests_general.ipynb  F(w)_tests_spherical.ipynb  README.md  precompute_GL.ipynb
archive/: Fw_tests_general.ipynb  Fw_tests_spherical.ipynb
cfastfht/: CMakeLists.txt
cfastfht/include/: cfastfht.h  finufft_simple.h
cfastfht/src/: cfastfht.c
fift/: __init__.py  compare_utils.py  fast_hankel_c.py  hankel.py  lenses.py  spatial.py  utils.py
fift/archive/: compare_utils.py
fiona/: __init__ (4).py  axisym.py  general (4).py  general.py  general_track_perf.py  lenses (2).py  lenses.py  utils (6).py  utils.py
fiona/archive/: utils.py
tests/: test_cfastfht.py
